--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,12 @@ python:
   - "3.5"
   - "3.6"      # current default Python on Travis CI
   - "3.7"
-  script:
-    - pytest
+  - "3.8"
+  - "3.8-dev"  # 3.8 development branch
+  - "nightly"  # nightly build
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
