Travis CI support

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 
 # command to run tests
 script:
-  - pytest tests -vv --cov walk_replace --cov devopslib --cov-report html --cov-report term
+  - pytest tests -v --cov=zentopia --cov=zentopia_product --cov=zentopia_product_api --cov-report html --cov-report term
    # - pylint walk_replace
   
 after_success:
