--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
   - "3.8"
   - "3.8-dev"  # 3.8 development branch
 
+before_install:
+  - python --version
+  - pip install -U pip
+  #- pip install -U pytest
+  - pip install codecov
+
 # command to install dependencies
 install:
   - pip install -r requirements.txt
